<resources>

    <string name="app_name">Myapp</string>
    <string name="hello_world">Hello world!</string>

    <!-- <string name="twitter_callback">http://javatechig.android.app</string> -->
    <string name="twitter_callback">oauth://t4jsample</string>
    <string name="twitter_consumer_key">R8tFzYEMmgZMilLqMDOAKXTwR</string>
    <string name="twitter_consumer_secret">ENu35uF4utJbYo0xpZ9LDHewIt5tyCX6Uv2u6Zb2ygMzJOtFvU</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="share">Share</string>

    <string name="app_id">1581281798756125</string>
    <string name="view">View</string>

    <string name="slash">/</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cancel">Cancel</string>
    <string name="email">E-mail</string>
    <string name="facebook">Facebook</string>
    <string name="go_back">Go Back</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="insert_nationality">Insert Nationality</string>
    <string name="insert_nick">Insert Nick</string>
    <string name="nationality">Nationality</string>
    <string name="nick_name">Nick Name</string>
    <string name="no_device_found">No user found</string>
    <string name="photo_camera">Photo Camera</string>
    <string name="save">Save</string>
    <string name="search_devices">Search</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="send">Send</string>
    <string name="sms">SMS</string>
    <string name="text_view">TextView</string>
    <string name="twitter">Twitter</string>
    <string name="type_message">Type messagge&#8230;</string>
    <string name="vibration_1">Vibration 1</string>
    <string name="vibration_2">Vibration 2</string>
    <string name="vibration_3">Vibration 3</string>
    <string name="vibration">Vibration</string>
    <string name="vibrations">Vibrations</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="postion_on_start">Position on start</string>
    <!--<string name="bluetooth_on_start">Bluetooth on start</string>-->
    <string name="disable">Disabled</string>
    <string name="vibration1">Vibration1</string>
    <string name="vibration2">Short</string>
    <string name="vibration3">Normal</string>
    <string name="vibration4">Long</string>
    <string name="light">Light</string>
    <string name="lights">Lights</string>
    <string name="notification">Notification</string>
    <string name="silence_test">Silence Test</string>
    <string name="sound_test">Sound Test</string>
    <string name="sound">Sounds</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="start_up">Start up</string>
    <string name="tone_test">Tone Test</string>
    <string name="visibility_on_start">Visibility on start</string>
    <string name="profile">Profile</string>
    <string name="visibility">Visibility</string>
    <string name="settings">Settings</string>
    <string name="questions">Questions</string>
    <string name="sounds">Sounds</string>
    <string name="skyline">(skyline)</string>
    <string name="disabled">Disabled</string>
    <string name="sound_receiving">Sound Receiving</string>
    <string name="sound_reply_1">Sound Reply 1</string>
    <string name="sound_reply_2">Sound Reply 2</string>
    <string name="vibration_reply_2">Vibration Reply 2</string>
    <string name="vibration_reply_1">Vibration Reply 1</string>
    <string name="vibration_receiving">Vibration Receiving</string>
    <string name="light_reply_2">Light Reply 2</string>
    <string name="light_reply_1">Light Reply 1</string>
    <string name="light_receiving">Light Receiving</string>
    <string name="led">Led</string>
    <string name="display">Display</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="color">Color</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="light_blue">Light blue</string>
    <string name="blue">Blue</string>
    <string name="violet">Violet</string>
    <string name="title_activity_no_internet_connection">NoInternetConnectionActivity</string>
    <string name="check_internet_connection">Internet connection missing.\nTry again when available</string>

    <!-- 1581281798756125 -->


</resources>
