<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/noDecviceFoundTextTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/vibration"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/noDecviceFoundTextTv"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"        
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:background="@drawable/rectangle"
        android:text="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="26dp"
        android:text="@string/vibration_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox1"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_alignTop="@+id/textView3"
        android:background="@drawable/rectangle"
        android:text="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="21dp"
        android:text="@string/vibration_3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignTop="@+id/textView4"
        android:background="@drawable/rectangle"
        android:text="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/noDecviceFoundTextTv"
        android:layout_alignLeft="@+id/noDecviceFoundTextTv"
        android:layout_below="@+id/noDecviceFoundTextTv"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/vibration_1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

</RelativeLayout>