<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.project.myapp.com.project.myapp.ListDevice">

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black">

            <TextView
                android:id="@+id/noDeviceFoundText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_device_found"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone" />


            <ProgressBar
                android:id="@+id/seacrhProgressBar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="100dp"
                android:visibility="invisible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <!--<ListView-->
                <!--android:id="@+id/foundDevicesListView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_above="@+id/rel"-->
                <!--android:visibility="invisible" />-->

                <TextView
                    android:id="@+id/toast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerHorizontal="true"
                    android:background="@drawable/roundedcorner"
                    android:layout_marginTop="450dp"

                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:textStyle="normal"
                    android:visibility="gone"
                    android:textSize="15sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:text="ddd" />


                <RelativeLayout
                    android:id="@+id/rel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center">

                    <Button
                        android:id="@+id/searchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginStart="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="@string/search_devices" />
                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" />

            <ListView
                android:id="@+id/textsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <EditText
                android:id="@+id/typeText"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:hint="@string/type_message" />

            <Button
                android:id="@+id/sendTextButton"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/send" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/go_back" />
        </LinearLayout>
    </ViewFlipper>

</LinearLayout>