<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_transparent_stroke"
            android:minHeight="150dp" >

            <TextView
                android:id="@+id/tv_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:padding="1dp"
                android:layout_margin="5dp"
                android:src="@drawable/profileicon1" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:minHeight="150dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/input_nick"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="NestedWeights"
                android:layout_weight="1"
                android:background="@drawable/background_stroke"
                android:gravity="center"
                android:hint="@string/insert_nick"
                android:text=""
                android:textColor="#FFFFFF"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_stroke" >

                <TextView
                    android:id="@+id/tv_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/insert_nationality"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ImageView
                    tools:ignore="ContentDescription"
                    android:id="@+id/img_nationality"
                    android:layout_width="120dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_stroke"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:background="@drawable/background_stroke"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_nationality1"
        android:layout_width="291dp"
        android:layout_height="45dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:background="@drawable/roundedcorner"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/insert_nationality"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:visibility="gone"
        tools:layout_marginTop="450dp"
        tools:padding="0dp" />

</RelativeLayout>