<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="3" >

   <!--  <RelativeLayout
        android:id="@+id/relHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourfour"
        android:background="#222222" >

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="@dimen/five"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tvtitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/backbtn"
            android:gravity="center"
            android:text="Share"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/onefive" />
    </RelativeLayout>
 -->
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:layout_gravity="center"
        android:layout_margin="@dimen/five"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            tools:ignore="NestedWeights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"                        android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:contentDescription="@null" 
                android:id="@+id/sms"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/sms" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sms"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/onefive" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:contentDescription="@null" 
                android:id="@+id/ivwhatsapp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/whatsapp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"                
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/whatsapp"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/onefive" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            tools:ignore="NestedWeights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:contentDescription="@null" 
                android:id="@+id/ivfacebook"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"                
                android:src="@drawable/facebook" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/onefive" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:contentDescription="@null" 
                android:id="@+id/ivtwitter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"                 
                android:src="@drawable/twitter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/twitter"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/onefive" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            tools:ignore="NestedWeights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:contentDescription="@null" 
                android:id="@+id/ivgoogleplus"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/onefive" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:contentDescription="@null" 
                android:id="@+id/ivbluetooth"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"                
                android:src="@drawable/bletooth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bluetooth" 
                android:textColor="#FFFFFF"
                android:textSize="@dimen/onefive" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>